--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "LINE API Helper npm package for LINE Developer",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./test/index_test.js"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,8 @@
   "homepage": "https://github.com/sirateek/lineapihelper#readme",
   "dependencies": {
     "axios": "^0.21.0"
+  },
+  "devDependencies": {
+    "jest": "^26.6.2"
   }
 }
