--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "LINE API Helper npm package for LINE Developer",
   "main": "dist/index.js",
   "scripts": {
-    "test": "node ./test/index_test.js",
+    "test": "mocha -r ts-node/register tests/**/*.test.ts",
+    "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test",
     "build": "tsc"
   },
   "repository": {
@@ -25,7 +26,14 @@
     "axios": "^0.21.0"
   },
   "devDependencies": {
-    "jest": "^26.6.2",
-    "typescript": "^4.0.5"
+    "@types/chai": "^4.2.14",
+    "@types/mocha": "^8.2.0",
+    "@types/node": "^14.14.14",
+    "chai": "^4.2.0",
+    "dotenv": "^8.2.0",
+    "mocha": "^8.2.1",
+    "nyc": "^15.1.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   }
 }
